--- a/build.gradle
+++ b/build.gradle
@@ -82,6 +82,13 @@ tasks.register("run-client") {
     description = 'Run the Client'
 }
 
+tasks.register("resolveDependencies") {
+ dependsOn project('server').getTasksByName('resolveDependencies',false)
+ dependsOn project('client').getTasksByName('resolveDependencies',false)
+ group = 'Build'
+ description = 'Resolve/Download Dependencies'
+}
+
 java {
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
