--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ build:
   tags:
      - ece651
   stage: build
-  script: docker build --build-arg LOCAL_USER_ID=`id -u`  --tag risc .
+  script: docker build --build-arg LOCAL_USER_ID=`id -u`  --tag citest .
 
 test:
   tags:
