--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,8 @@ test:
   tags:
      - ece651
   stage: test
+  dependencies:
+    - build
   script: scripts/run-tests-in-docker.sh
   artifacts:
     paths:
@@ -45,6 +47,8 @@ deploy:
   tags:
     - ece651
   stage: deploy
+  dependencies:
+    - test
   script: ./scripts/redeploy.sh
 
 test-deployment:
