--- a/client/build.gradle
+++ b/client/build.gradle
@@ -14,6 +14,8 @@ plugins {
 application {
     // Define the main class for the application.
     mainClassName = 'edu.duke.ece651.team6.client.App'
+    // mainClassName = 'edu.duke.ece651.team6.client.HumanPlayer'
+
 }
 
 
