--- a/server/build.gradle
+++ b/server/build.gradle
@@ -14,4 +14,5 @@ plugins {
 application {
     // Define the main class for the application.
     mainClassName = 'edu.duke.ece651.team6.server.App'
+    // mainClassName = 'edu.duke.ece651.team6.server.RiscMaster'
 }
