--- a/server/build.gradle
+++ b/server/build.gradle
@@ -13,6 +13,6 @@ plugins {
 
 application {
     // Define the main class for the application.
-    mainClassName = 'edu.duke.ece651.team6.server.App'
+    mainClassName = 'edu.duke.ece651.team6.server.RiscMaster'
     // mainClassName = 'edu.duke.ece651.team6.server.RiscMaster'
 }
