--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ subprojects{
         // This dependency is used by the application.
         implementation 'com.google.guava:guava:30.1.1-jre'
         clover 'org.openclover:clover:4.4.1'
+        // Use Mockito for testing
+        testImplementation 'org.mockito:mockito-core:3.12.4'
         
     }
     clover{
