--- a/client/build.gradle
+++ b/client/build.gradle
@@ -13,10 +13,11 @@ plugins {
 
 application {
     // Define the main class for the application.
-    mainClassName = 'edu.duke.ece651.team6.client.HumanPlayer'
-    // mainClassName = 'edu.duke.ece651.team6.client.HumanPlayer'
-
+    mainClassName = 'edu.duke.ece651.team6.client.App'
 }
 
+run{
+    standardInput = System.in
+}
 
 
