--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,11 @@ subprojects{
         implementation 'org.openjfx:javafx-media:16'
         implementation 'org.openjfx:javafx-swing:16'
         implementation 'org.openjfx:javafx-web:16'
+        implementation 'org.mongodb:mongodb-driver-sync:4.5.1'
+        implementation 'com.google.code.gson:gson:2.10.1'
+        implementation 'dev.morphia.morphia:morphia-core:2.2.6'
+        implementation 'org.slf4j:slf4j-log4j12:1.7.30'
+        implementation 'org.apache.logging.log4j:log4j-core:2.14.1'
         testImplementation "org.testfx:testfx-core:4.0.16-alpha"
         testImplementation "org.testfx:testfx-junit5:4.0.16-alpha"
         testImplementation group: 'org.hamcrest', name: 'hamcrest', version: '2.1'
